3일차 이름 검색 후 입/출금 완료